2011-12-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/menu.c (menu_init): Don't stop menu init at gfxterm.

2011-12-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* unicode: Import Unicode 6.0 data.

2011-12-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/gfxterm.c (grub_gfxterm_putchar): Don't set values
	outside of range.

2011-12-25  Vladimir Serbinenko  <phcoder@gmail.com>

	Avoid cutting in the middle of UTF-8 character.

	* include/grub/charset.h (grub_getend): New function.
	* grub-core/script/function.c (grub_script_function_find): Use
	grub_getend.
	* grub-core/normal/completion.c (add_completion): Likewise.

2011-12-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/charset.c (grub_ucs4_to_utf8): Small stylistic fix.
	(grub_bidi_line_logical_to_visual): Skip tags. They are deprecated.
	* include/grub/unicode.h (GRUB_UNICODE_TAG_START): New enum value.
	(GRUB_UNICODE_TAG_END): Likewise.
	(GRUB_UNICODE_LAST_VALID): Likewise.

2011-12-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/unicode.h (grub_unicode_compact_range): Replace end with
	len and make it smaller. All users updated.
	* util/import_unicode.py: Put length and not end character.
	Check length.

2011-12-25  Vladimir Serbinenko  <phcoder@gmail.com>

	Make better Unicode-compliant and unify some UTF-8 code pathes.

	* grub-core/normal/charset.c (grub_utf8_to_utf16): Don't eat possibly
	valid character.
	(grub_is_valid_utf8): Use grub_utf8_process.
	Check resulting code range.
	(grub_utf8_to_ucs4): Use grub_utf8_process.
	* include/grub/charset.h (grub_utf16_to_utf8): Don't eat up a possibly
	valid character.

2011-12-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/io/bufio.c (grub_bufio_read): Fix handling of corner cases.

2011-12-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi (Filesystems): Mention AFS.

2011-12-25  Vladimir Serbinenko  <phcoder@gmail.com>
